2.2.9
- print export: Layout improved and daily sums included
- update fileicons
- minor parameter changes for htmldoc (html2pdf)
- email header for server emails is now adjustable in config.php
- on team maintenance page users are now displayed sorted : surname, prename
- minor bugfixes

2.2.8
- mobile log: only current projects will be shown in the projectlist now
- iPhone: content is now automatically scaled by using <meta name="viewport" content="width=device-width">
- export: print view layout improved
- LDAP enhancements : 
  Account creation of Non-LDAP-users on LDAP-authentication systems now possible
  Non-LDAP-users may change their password now
- Eliminated template for OpenOffice 1.x (new sql, but old ones are still compatible)
- minor bugfixes and cleanup

2.2.7
- improved LDAP authentication: mixed LDAP and NON LDAP accounts, user creation on the fly
  of a properly authenticated LDAP user during first log in
- overview by project: colors adapted (up to 100% ... green, > 100% yellow, > 125% red)
- mobile log: time will updated now with server time
- mobile access: check for login with mobile browser implemented
- bugfix: mobile access for Opera Mini
- some minor bugfixes and cleanup

2.2.6
- openTimetool is now ready for php 5.3. config.php is updated with the minimum statements to get it run
  eliminated deprecated functions (i.e. split to explode, ...) 
  fixed some 5.3 related bugs caused by now different behaviour
- major performance improvement for the team page
  the compress rate for building the team page can now be set by a parameter in the config.php
  to get the best compromise for sufficient information and performance use the default setting 
- it's now possible to delete old exports on export popup page (file and db entry)
  
2.2.5 
- wrong calculated sum in export to OO-template is fixed
- project related reports are possible now by enhancement to OOTemplate-based export
- in folder docs/Samples for OO Templating/ you'll find